--- a/HRichEditorView/src/main/AndroidManifest.xml
+++ b/HRichEditorView/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
-        <activity android:name="com.huangdali.view.HRichEditorView" />
+        <activity android:name="com.huangdali.view.HRichEditorActivity" />
         <activity android:name="com.huangdali.view.TitleEidtorActivity" />
         <activity android:name="com.huangdali.view.TXTEditorActivity" />
         <activity android:name="com.huangdali.view.LinkedActivity" />
